  * po/pl.po:
    - updated, thanks to Emil Nowak 
  * gtk/rgrepositorywin.cc:
    - do not crash when a sources.list entry is removed (closes: #720605)
  * gtk/rgfiltermanager.cc:
    - do not change topmost filter when reopening filter settings
      (closes: #724709)
    - fix copy constructor to avoid incorrect reading of the
      and/or mode value (closes: #724709)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Sun, 23 Mar 2014 09:24:16 +0100

synaptic (0.81) unstable; urgency=low

  [ Jonathan Dowland ]
  * Support parallel building.
  
  [ Luke Drummond ]
  * fix crash when no SUDO_USER is set (closes: #725885, #728714)

  [ Hans Joachim Desserud ]
  * lp:~hjd/synaptic/bug1242219: 
    fix "Untranslatable '_Contents' string in help menu (LP: #1242219)
  
  [ Rafaël Carré ]
  * po/fr.po:
    - fix typo in "%d packages will be upgraded\n" string
  
  [ Igor Pashev ]
  * portability fixes for rindex/bzero/fcntl (closes: #734473)
    to make it build on "dyson"
  
  [ Michael Vogt ]
  * replace rindex() with strrchr() (thanks to Igor Pashev for the
    suggestion)
  * change refreshTable() code to avoid "jumping" around on the 
    screen when a package gets marked
  
 -- Michael Vogt <mvo@debian.org>  Tue, 18 Mar 2014 21:02:46 +0100

synaptic (0.80.4) unstable; urgency=low

  * gtk/rgdebinstallprogress.cc:
    - add workaround for vte terminal not resizing to 80x24,
      thanks to Filipus Klutier (closes: #710030)
  * gtk/rgterminstallprogress.cc:
    - force terminal size to 80x24 (closes: #710030)

 -- Michael Vogt <mvo@debian.org>  Sat, 14 Sep 2013 13:31:10 +0200

synaptic (0.80.3) unstable; urgency=low

  * gtk/rgmainwindow.cc, gtk/gtkbuilder/window_main.ui:
    - workaround "Gtk-WARNING **: GtkNotebook 0x998580 is mapped but visible 
      child GtkLabel 0x9ac140 is not mapped" by setting "show_tabs=True" in
      the GtkBuilder file and then setting it in buildInterface() again
      (closes: #721539)