@@ -12,6 +12,7 @@ synaptic (0.81.1) UNRELEASED; urgency=low
       (closes: #724709)
     - fix copy constructor to avoid incorrect reading of the
       and/or mode value (closes: #724709)
+    - fix memory leak in filter copy/restore
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Sun, 23 Mar 2014 09:24:16 +0100
 
